[package]
name = "ws"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
futures-util = { version = "0.3", default-features = false, features = ["async-await", "sink", "std"] }
pin-project = "1.0"
tokio = { version = "1.0.0", features = ["full"] }
url = "2.0.0"
futures-channel = "0.3"
env_logger = "0.7"
tungstenite = "*"
tokio-tungstenite = "*"